# store-contract

./: .binpath  Cargo.toml  build.rs  rust-toolchain.toml
.github/workflows/: check.yml
io/: Cargo.toml
io/src/: lib.rs  state_io.rs
src/: contract.rs  handler.rs  lib.rs  state.rs
